# KCFDepthCamera

Camera/: CMakeLists.txt  package.xml
Camera/include/AAMED/src/: Segmentation.cpp
Camera/include/Camera/: camera.cpp  camera.h
Camera/include/DBSCAN/: dbscan.cpp  dbscan.h
Camera/include/KCF/src/: kcftracker.cpp
Camera/include/eco/include/: fhog.hpp
Camera/include/eco/src/: feature_operator.cc  sample_update.cc  scale_filter.cc
Camera/src/: main.cpp
include/AAMED/: EllipseConstraint.h  EllipseNonMaximumSuppression.h  FLED.h  definition.h
include/AAMED/src/: Contours.cpp  EllipseNonMaximumSuppression.cpp  FLED.cpp  FLED_PrivateFunctions.cpp  FLED_drawAndWriteFunctions.cpp  Group.cpp  Validation.cpp
include/Camera/: camera.cpp  camera.h
include/KCF/include/: recttools.hpp
include/KCF/src/: fhog.cpp  vot_kcf.cpp
include/eco/include/: eco.hpp  recttools.hpp
include/eco/src/: eco.cc  feature_extractor.cc  ffttools.cc  fhog.cc  gradient.cpp  interpolator.cc  metrics.cc  optimize_scores.cc  regularization_filter.cc  training.cc
launch/: Stereo.launch
src/: main.cpp
